[gd_scene load_steps=21 format=3 uid="uid://be3npmaxl1dqt"]

[ext_resource type="PackedScene" uid="uid://bqp635jwwerdi" path="res://Scenes/Hotbar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://do27smyoonomq" path="res://Scenes/PauseCanvas.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://d1gaonko6414y" path="res://Scenes/ItemDrop.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://d1gu8jvv2ehdw" path="res://Scenes/WorldText.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://sptuwattqnxx" path="res://Scenes/MobileGUI.tscn" id="7"]
[ext_resource type="Script" path="res://Scripts/World Scripts/Day Night Cycle.gd" id="7_4dfce"]
[ext_resource type="PackedScene" uid="uid://dhbwwgafycs62" path="res://Scenes/PlayerController.tscn" id="8"]
[ext_resource type="Script" path="res://Scripts/Player Scripts/VisibilityNotifier.gd" id="9"]
[ext_resource type="Script" path="res://Scripts/Misc Scripts/World.gd" id="10"]
[ext_resource type="Script" path="res://Scripts/Inventory Scripts/UserInterface.gd" id="11"]
[ext_resource type="Texture2D" uid="uid://dyujsis1wyk6q" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_2.png" id="12"]
[ext_resource type="Texture2D" uid="uid://b3fq3j7c2lohl" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_3.png" id="14"]
[ext_resource type="AudioStream" uid="uid://pthch1c0g3pi" path="res://Music/1-Minute Nature Background Sound.mp3" id="15"]
[ext_resource type="Texture2D" uid="uid://cqjvjx13fiilp" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_4.png" id="17"]
[ext_resource type="Texture2D" uid="uid://b7v8kf2ug3f71" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_6.png" id="18"]
[ext_resource type="Texture2D" uid="uid://dcm1bmc7tnxwm" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_1.png" id="19"]
[ext_resource type="Texture2D" uid="uid://bdf8blivvncvl" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_5.png" id="20"]
[ext_resource type="Texture2D" uid="uid://cl8b58ry7dpre" path="res://Sprites/Core Game Sprites/Background/BG_Light_Layer_7.png" id="21"]

[sub_resource type="Environment" id="19"]
background_mode = 4
tonemap_white = 0.8
ssr_enabled = true
glow_enabled = true
glow_intensity = 2.5
glow_bloom = 0.05
glow_hdr_threshold = 0.0
glow_hdr_scale = 1.62
glow_hdr_luminance_cap = 145.47

[sub_resource type="TileSet" id="29"]

[node name="World" type="Node"]
script = ExtResource("10")

[node name="GUIElements" type="Node2D" parent="."]

[node name="WorldText" parent="GUIElements" instance=ExtResource("6")]

[node name="MobileGUI" parent="GUIElements" instance=ExtResource("7")]
visible = false

[node name="InventoryGUI" type="CanvasLayer" parent="GUIElements"]
script = ExtResource("11")

[node name="Hotbar" parent="GUIElements/InventoryGUI" instance=ExtResource("3")]

[node name="PauseCanvas" parent="GUIElements" instance=ExtResource("4")]

[node name="WorldAmbience" type="Node2D" parent="."]

[node name="Day Night Cycle" type="CanvasModulate" parent="WorldAmbience"]
color = Color(0.94902, 0.894118, 0.894118, 1)
script = ExtResource("7_4dfce")

[node name="Background" type="ParallaxBackground" parent="WorldAmbience"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer"]
position = Vector2(149, 68)
texture = ExtResource("21")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_scale = Vector2(0.6, 1)
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer2"]
position = Vector2(150, 68)
texture = ExtResource("18")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_scale = Vector2(0.5, 1)
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer3"]
position = Vector2(150, 68)
texture = ExtResource("20")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_scale = Vector2(0.4, 1)
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer4"]
position = Vector2(150, 68)
texture = ExtResource("17")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer5"]
position = Vector2(150, 68)
texture = ExtResource("14")

[node name="ParallaxLayer6" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer6"]
position = Vector2(150, 68)
texture = ExtResource("12")

[node name="ParallaxLayer7" type="ParallaxLayer" parent="WorldAmbience/Background"]
motion_scale = Vector2(0.1, 1)
motion_mirroring = Vector2(512, 288)

[node name="Sprite2D" type="Sprite2D" parent="WorldAmbience/Background/ParallaxLayer7"]
position = Vector2(150, 68)
texture = ExtResource("19")

[node name="Background Audio" type="AudioStreamPlayer" parent="WorldAmbience"]
stream = ExtResource("15")
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="WorldAmbience"]
environment = SubResource("19")

[node name="ItemDebug" type="Node2D" parent="."]

[node name="ItemDrop" parent="ItemDebug" instance=ExtResource("5")]
position = Vector2(174, 85)
collision_layer = 4
collision_mask = 2

[node name="ItemDrop2" parent="ItemDebug" instance=ExtResource("5")]
position = Vector2(116, 102)
collision_layer = 4
collision_mask = 2

[node name="ItemDrop3" parent="ItemDebug" instance=ExtResource("5")]
position = Vector2(-22, 101)
collision_layer = 4
collision_mask = 2

[node name="ItemDrop4" parent="ItemDebug" instance=ExtResource("5")]
position = Vector2(55, 82)
collision_layer = 4
collision_mask = 2

[node name="ItemDrop5" parent="ItemDebug" instance=ExtResource("5")]
position = Vector2(235, 65)
collision_layer = 4
collision_mask = 2

[node name="GameMap" type="TileMap" parent="."]
position = Vector2(1.52588e-05, 0)
tile_set = SubResource("29")
format = 2

[node name="Player" parent="." instance=ExtResource("8")]
position = Vector2(149, 111)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="Player"]
position = Vector2(2.08616e-06, -1.43051e-06)
scale = Vector2(29.2857, 16.5714)
script = ExtResource("9")

[connection signal="screen_entered" from="Player/VisibleOnScreenNotifier2D" to="Player/VisibleOnScreenNotifier2D" method="_on_screen_entered"]
[connection signal="screen_exited" from="Player/VisibleOnScreenNotifier2D" to="Player/VisibleOnScreenNotifier2D" method="_on_screen_exited"]
